# ioq3

./: .gitignore  CMakeLists.txt  cpp.py
code/: CMakeLists.txt
code-cpp/: CMakeLists.txt
code-cpp/renderergl2/glsl/: stringify.cpp
code/qcommon/: q_platform.h
