# ===========================================================================
# Copyright (C) 2020 Aggi

# This file is part of cppioq3 source code.

# cppioq3 source code is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the License,
# or (at your option) any later version.

# cppioq3 source code is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with cppioq3 source code; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
# ===========================================================================

cmake_minimum_required(VERSION 3.12)

project(ioq3 LANGUAGES C CXX ASM_MASM)
add_subdirectory(code)
